src/components/NavbarApp.css
#navbar{
    color: white !important;
  }

.header{
    position: fixed;
    background-color: black;
    width: 100%;
    height: 90px;
    display:flex;
    justify-content: flex-end;
    align-items: center;
    padding: 1rem;
    z-index: 10;
}

.image {
    transition: transform 0.3s ease-in-out;
  }
  
  .image img {
    display: block;
    transition: transform 0.3s ease-in-out;
  }
  
  .image:hover img, .image1:hover img {
    transform: scale(1.1);
  }

.nav-menu{
    display: flex;
}

.nav-menu li{
    padding: 0 1rem;
    position: relative;

}

.nav-menu a{
    font-size: 1.2rem;
    font-weight: 500;
    text-decoration: none;
    color: white;
    position: relative;
    z-index: 1;
    transition: color 0.3s ease;
}

.nav-menu a::before {
    content: '';
    position: absolute;
    width: 0;
    height: 2px;
    bottom: -3px;
    left: 50%;
    background-color: white;
    transition: width 0.3s ease, left 0.3s ease;
  }
  
  .nav-menu a:hover::before {
    width: 100%;
    left: 0;
  }

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-arrow {
    font-size: 10px; 
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: white;
    min-width: 140px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    border-radius: 4px;
    padding: 10px 0;
    margin-top: 12px; 
}

.dropdown-content a {
    color: gray;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    font-weight: bold;
    font-size: 12px;
}

.dropdown-content a:hover {
    background-color: #f1f1f1;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown span {
    cursor: default;
    font-weight: bold;
    color: gray;
}

.hamburger{
    display: none;
}

@media screen and (max-width:600px) {
    .hamburger{
        display: block;
    }

    .nav-menu{
        position: absolute;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        top: 0;
        left: -100%;
        text-align: center;
        width: 100%;
        height: 100vh;
        transition: 0.3s;
        z-index: -1;
        background: rgba(0, 0, 0, .9);
    }

    .nav-menu.active{
        left: 0;
    }

    .nav-menu li{
        padding: 1rem 0;
    }

    .nav-menu a{
        font-size: 2rem;
    }
    
}

